# simple-sentencepiece

./: CMakeLists.txt  build.cmd  setup.py
.github/workflows/: build-wheels.yml  build-wheels.yml.bak  linux-build.yml  mac-build.yml  release.yml  windows-build.yml  windows-msys2.yml  windows-static.yml.bak
